--- a/src/BurnSystems.FlexBG/BurnSystems.FlexBG.csproj
+++ b/src/BurnSystems.FlexBG/BurnSystems.FlexBG.csproj
@@ -228,7 +228,8 @@
     <Compile Include="Modules\UserM\Local\Data\UserDatabaseInfo.cs" />
     <Compile Include="Modules\UserM\Local\Data\UserDatabaseLocal.cs" />
     <Compile Include="Modules\UserM\Interfaces\IUserManagement.cs" />
-    <Compile Include="Modules\UserM\Logic\ASPNetIdentity\FlexBGIdentityUser.cs" />
+    <Compile Include="Modules\UserM\Logic\ASPNetIdentity\FlexBgIdentityRole.cs" />
+    <Compile Include="Modules\UserM\Logic\ASPNetIdentity\FlexBgIdentityUser.cs" />
     <Compile Include="Modules\UserM\Logic\ASPNetIdentity\FlexBgUserDbContext.cs" />
     <Compile Include="Modules\UserM\Logic\ASPNetIdentity\UserManagementAspNetIdentity.cs" />
     <Compile Include="Modules\UserM\Logic\CurrentUserHelper.cs" />
